# qmshe-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
configs/: config.yaml
configs/data/: psc.yaml
configs/experiment/: public_benchmarks.yaml  scaling.yaml
data/benchmarks/: psc_demo.md  (+2 more)
docker/: official-baselines.Dockerfile
docs/: BENCHMARK_V2.md  CORE_ABLATION_PROTOCOL.md  DUAL_MODE.md  FINETUNE_ABLATION.md  IMPLEMENTATION.md  PHASES_3_5.md  REMOTE_DEPLOYMENT.md  SYSTEM_BASELINES.md  UNIFIED_NATIVE_BENCHMARK.md
reports/: ABLATION_CONCLUSIONS_zh.md  REMOTE_SUMMARY.md
scripts/: build_psc_corpus.py  download_benchmark_samples.py  download_benchmark_v2_data.py  evaluate_core_ablation_matrix.py  evaluate_stage_a_training_effect.py  export_official_baseline_bundle.py  finalize_benchmark_v2.py  generate_math_report.py  ingest_corpus.py  reproduce_delivery.py  requery_path_hyper_internal.py  run_ablations.py  run_baselines.py  run_benchmark_provider_proxy.py  run_benchmark_v2.py  run_dual_mode_experiment.py  run_factorial_attribution.py  run_finetune_seed_matrix.py  run_load_test.py  run_public_experiment.py  run_qmsxe_passage_eval.py  run_rag_baselines.py  run_runtime_ablation_matrix.py  run_stage_ab_matrix.py  run_trained_ablations.py  run_trained_parity_v2.py  run_unified_native_benchmark.py  train_core_ablation_matrix.py  train_graph_mode.py  train_inductive_stage_a.py  train_public_benchmark.py  train_query_lora.py  train_reranker_lora.py  train_spectral_stage_b.py  verify_infrastructure.py
(+438 files in other folders)
