[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qmshe-rag"
version = "0.1.0"
description = "Dual-mode query-adaptive spectral-semantic Graph and Hypergraph RAG"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "scipy>=1.13,<2",
  "torch>=2.4,<3",
  "scikit-learn>=1.5,<2",
  "rank-bm25>=0.2.2,<1",
  "networkx>=3.3,<4",
  "PyMuPDF>=1.24,<2",
  "pyyaml>=6,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
infra = [
  "qdrant-client>=1.11,<2",
  "neo4j>=5.24,<6",
  "psycopg[binary]>=3.2,<4",
  "redis>=5,<6",
  "celery>=5.4,<6",
  "mlflow>=2.16,<4",
]
evaluation = [
  "datasets>=3,<5",
  "faiss-cpu>=1.8,<2; platform_machine != 'arm64'",
]
lora = [
  "transformers>=4.48,<5",
  "peft>=0.14,<1",
  "accelerate>=1.2,<2",
  "sentencepiece>=0.2,<1",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
qmshe = "qmshe.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/qmshe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
